# weekend-agent-final

./: .gitignore  README.md  app.py  pyproject.toml  设计文档.md
.claude/: settings.json
archive_out/: 01-题目工程拆解.md  02.架构和agent.md  03.细节实现.md  README.md
backend/: __init__.py  __main__.py  compensator_scoring.py  config.py  constraints_util.py  demo.py  failure_detect.py  graph.py  hil.py  insertion_catalog.py  llm_client.py  revise_utils.py  roles.py  schemas.py  server.py  state.py  timeline_utils.py  trace_compare.py  trace_score.py
backend/agents/: __init__.py  planner.py  profiler.py  researcher.py
backend/mock_meituan/: __init__.py  app.py  backend.py  catalog.py  routes.py
backend/nodes/: __init__.py  compensator.py  critic.py  dry_run.py  executor.py  hil.py  notifier.py  plan_patcher.py  planner.py  profiler.py  researcher.py  targeted_researcher.py
backend/tools/: README.md  __init__.py  errors.py  http_client.py  plan_mapping.py  registry.py
docs/: mock-api.md  解释文档.md
frontend/: package-lock.json
frontend-v2/: index.html  package-lock.json  vite.config.ts
frontend-v2/src/: App.tsx  api.ts  index.css  types.ts
planner/: __init__.py  composer.py  filters.py  graph.py  llm_wrapper.py  retriever.py  state.py  timeline.py  tool_hub.py  trace.py
scripts/: demo_highlights.py  demo_soft_constraints.py
tests/: test_compensator_scoring.py  test_failure_self_heal.py  test_hil_api.py  test_mock_http.py  test_mock_tools.py  test_plan_issues.py  test_plan_revise.py  test_scene_surgery.py  test_semantic_catalog.py  test_stream_api.py
(+26 files in other folders)
